--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
+    "compression": "^1.8.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.0"
   },
