--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "men-stack-crud-app-lab",
   "version": "1.0.0",
   "main": "server.js",
-  "engines":{ "node": "22.x"},
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "sync:indexes": "node scripts/sync-indexes.js"
+    "sync:indexes": "node scripts/sync-indexes.js",
+    "seed": "node -r dotenv/config scripts/seed.js"
   },
   "keywords": [],
   "author": "",
